Fix header text overlap on small screens

--- a/main.css
+++ b/main.css
@@ -116,8 +116,23 @@ body {
          * to override that in single-column mode */
         width: 100% !important;
     }
+
+    .header {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        align-items: center;
+    }
     #title {
-        font-size: 1.3em;
+        font-size: 1.5em;
+        display: inline-block;
+        margin: 0;
+        flex: 0 1 100%;
+    }
+
+    #logos {
+        display: inline-block;
+        position: static;
     }
 }
 
